Added SIP download

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </div>
       <div>
           <a href="http://docs.highrollerskc.com" class="btn btn-ghost">Knowledge Base</a>
+          <a href="resources/downloads/SIP_Apps.zip" class="btn btn-ghost">Download SIP</a>
       </div>
       <div class="copyright-box">
           <p>
