Hotline Bling link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div>
           <a href="http://docs.highrollerskc.com" class="btn btn-ghost">Knowledge Base</a>
-          <a href="resources/downloads/SIP_Apps.zip" class="btn btn-ghost">Download SIP</a>
+          <a href="https://us02web.zoom.us/j/83947285131?pwd=UDIzc0plQmtwbHNtaWRWMy9sUDdRQT09" class="btn btn-ghost">Hotline Bling</a>
       </div>
       <div class="copyright-box">
           <p>
