--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css?v=1.0.2">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css?v=1.0.3">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <meta charset="utf-8">
@@ -21,7 +21,7 @@
       </div>
       <div>
           <a href="http://docs.highrollerskc.com" class="btn btn-ghost">Knowledge Base</a>
-          <a href="https://us02web.zoom.us/j/83947285131?pwd=UDIzc0plQmtwbHNtaWRWMy9sUDdRQT09" class="btn btn-ghost">Hotline Bling</a>
+          <a href="https://homeadvisor.zoom.us/j/97798107331?pwd=WHJtMm5KK2J6TG84ZytlMnFkTk9jZz09" class="btn btn-ghost">Hotline Bling</a>
       </div>
       <div class="copyright-box">
           <p>
